syntax = "proto3";

package cabin.v1;
option go_package = "cabin/v1;demov1";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service DemoService {
    rpc GetDemo(GetDemoRequest) returns (GetDemoResponse) {
        option idempotency_level = NO_SIDE_EFFECTS;
    }

    // ListDemos returns demos list of current user.
    rpc ListDemos(ListDemosRequest) returns (ListDemosResponse) {
        option idempotency_level = NO_SIDE_EFFECTS;
    }
}

enum DemoStatus {
    DEMO_STATUS_UNSPECIFIED = 0;
    AWAITING = 1;
    PROCESSED = 2;
    ERROR = 3;
}

message Demo {
    string id = 1;
    DemoStatus status = 2;
    string reason = 3;
    google.protobuf.Timestamp uploaded_at = 4;
    google.protobuf.Timestamp processed_at = 5;
}

message GetDemoRequest {
    string demo_id = 1 [(buf.validate.field).string.uuid = true]; // required
}

message GetDemoResponse {
    Demo demo = 1;
}

message ListDemosRequest {
    DemoStatus status = 1;
}

message ListDemosResponse {
    repeated Demo demos = 1;
}
